--- a/SCPSelector.csproj
+++ b/SCPSelector.csproj
@@ -34,6 +34,10 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>D:\SCPSL\SCPSL_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="CommandSystem.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\SCPSL\SCPSL_Data\Managed\CommandSystem.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Mirror">
       <HintPath>D:\SCPSL\SCPSL_Data\Managed\Mirror.dll</HintPath>
     </Reference>
@@ -60,14 +64,17 @@
       <HintPath>D:\SCPSL\SCPSL_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
     </Reference>
     <Reference Include="YamlDotNet, Version=11.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
-      <HintPath>packages\YamlDotNet.11.0.1\lib\net45\YamlDotNet.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\SCPSL\SCPSL_Data\Managed\YamlDotNet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\Restore.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="Messages.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Commands\SCPSelectorCommand.cs" />
+    <Compile Include="SelectionData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
